--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/architgarg/live-weather#readme",
   "dependencies": {
-    "request": "^2.83.0"
+    "dotenv": "^4.0.0",
+    "request": "^2.83.0",
+    "yargs": "^10.0.3"
   }
 }
